<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Geek Alarm Clock</string>
    <string name="alarm_list_title">Alarms</string>
    <string name="add_alarm">Add alarm</string>
    <string name="menu_desk_clock">Desk clock</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Turn alarm on</string>
    <string name="disable_alarm">Turn alarm off</string>
    <string name="delete_alarm_confirm">Delete this alarm?</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Ringtone</string>
    <string name="time">Time</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string-array name="alarm_set">
        <item>Alarm set for less than 1 minute from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="every_day">Every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">Choose a clock</string>
    <string name="analog_gadget">Geek Clock (BLACK)</string>
    <string name="settings">Settings</string>
    <string name="alarm_in_silent_mode_title">Alarm in silent mode</string>
    <string name="alarm_in_silent_mode_summary">Play alarm even when the device is in silent mode</string>
    <string name="snooze_duration_title">Snooze duration</string>
    <string-array name="snooze_duration_entries">
        <item>1 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
    <string name="auto_silence_title">Auto-silence</string>
    <string name="auto_silence_summary">Alarms will silence after <xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="auto_silence_never">Off</string>
    <string-array name="auto_silence_entries">
        <item>Off</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="auto_silence_values" translatable="false">
        <item>-1</item> 
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="delete">Delete</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="alarm_volume_summary">Set the volume of alarms</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="alarm_notify_text">Snooze or dismiss alarm.</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Touch to cancel.</string>
    <string name="volume_button_setting_title">Volume buttons</string>
    <string name="volume_button_dialog_title">Button effect</string>
    <string name="volume_button_setting_summary">Set what these buttons do when pressed during an alarm</string>
    <string-array name="volume_button_setting_entries">
        <item>None</item>
        <item>Snooze</item>
        <item>Dismiss</item>
    </string-array>
    <string-array name="volume_button_setting_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="default_ringtone_setting_title">Set default ringtone</string>
    <string name="alarm_button_description">Alarms</string>
    <string name="gallery_button_description">Gallery</string>
    <string name="music_button_description">Music</string>
    <string name="nightmode_button_description">Dim</string>
    <string name="home_button_description">Launcher</string>
    <string name="desk_clock_button_description">Clock display</string>
    <string name="battery_charging_level"><xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
    <string name="weather_fetch_failure">Weather information isn\'t available right now.</string>
    <string name="menu_item_dock_settings" msgid="9161438664257429372">Dock settings</string>
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms set in Clock.</string>
    <string name="loading_ringtone">Loading ringtone\u2026</string>
    <string name="control_set_alarm">Set alarm</string>
    <string name="control_set_alarm_with_existing">Alarm set: <xliff:g id="time">%s</xliff:g></string>
    <string name="next_question_button">Next Question</string>
    <string name="snooze_button">Snooze</string>
    <string name="show_ans_button">Show Answer</string>
    <string name="analog_gadget_white">Geek Clock (White)</string>
    <string name="snooze_shake_title">Shake to snooze</string>
    <string-array name="snooze_shake_times_entries">
        <item>5 times</item>
        <item>10 times</item>
        <item>15 times</item>
        <item>20 times</item>
    </string-array>
    <string-array name="snooze_shake_times_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="dismiss_shake_times_entries">
        <item>15 times</item>
        <item>20 times</item>
        <item>25 times</item>
        <item>30 times</item>
    </string-array>
    <string-array name="dismiss_shake_times_values">
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="dismiss_times_title">Shake to dismiss alarm</string>
    <string name="button_next_question">Next question</string>
</resources>