<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/title_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:gravity="center_vertical|left"
            android:minHeight="@dimen/alert_dialog_title_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/alertTitle"
                style="?android:attr/windowTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:id="@+id/titleDivider"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@android:color/holo_blue_light" />
    </LinearLayout>

    <com.aungthiha.geekalarm.DigitalClock
        android:id="@+id/digitalClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanel"
        android:layout_centerHorizontal="true"
        android:baselineAligned="true"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:paddingLeft="24dip"
        android:paddingRight="20dip"
        android:paddingTop="24dip" >

        <com.aungthiha.geekalarm.AndroidClockTextView
            android:id="@+id/timeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="44dip"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="40dp" />

        <com.aungthiha.geekalarm.AndroidClockTextView
            android:id="@+id/am_pm"
            android:layout_width="40dip"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/timeDisplay"
            android:layout_alignParentRight="true"
            useClockTypeface="false"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />
    </com.aungthiha.geekalarm.DigitalClock>

    <ScrollView
        android:id="@+id/scrollquestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/digitalClock" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="10dip"
                android:onClick="onClick"
                android:textSize="19sp" />

            <View
                android:id="@+id/divider_question"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/question"
                android:background="?android:attr/dividerHorizontal" />

            <Button
                android:id="@+id/ch1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/divider_question"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/alarm_alert_dismiss_text" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/ch1"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:background="?android:attr/dividerHorizontal" />

            <Button
                android:id="@+id/ch2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/divider1"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/alarm_alert_dismiss_text" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/ch2"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:background="?android:attr/dividerHorizontal" />

            <Button
                android:id="@+id/ch3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/divider2"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/alarm_alert_dismiss_text" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/ch3"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:background="?android:attr/dividerHorizontal" />

            <Button
                android:id="@+id/ch4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/divider3"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/alarm_alert_dismiss_text" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/ch4"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:background="?android:attr/dividerHorizontal" />

            <Button
                android:id="@+id/ch5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/divider4"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/alarm_alert_dismiss_text" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/ch5"
                android:background="?android:attr/dividerHorizontal" />

            <TextView
                android:id="@+id/answer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider5"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="10dip"
                android:textSize="17sp" />

            <View
                android:id="@+id/divider_buttom"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/answer_view"
                android:background="@android:color/holo_blue_light" />

            <LinearLayout
                android:id="@+id/button_bar"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_buttom" >

                <Button
                    android:id="@+id/show_answer"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="actionButton"
                    android:text="@string/show_ans_button" />

                <Button
                    android:id="@+id/snooze"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:onClick="actionButton"
                    android:text="@string/snooze_button" />
            </LinearLayout>

            <View
                android:id="@+id/final_bar"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/button_bar"
                android:background="@android:color/holo_blue_light" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>